# sablib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sablib.h  sablibConfig.cmake.in  vcpkg.json
baseline/: airpls.cpp  airpls.h  arpls.cpp  arpls.h  asls.cpp  asls.h  backcor.cpp  backcor.h  beads.cpp  beads.h  goldindec.cpp  goldindec.h  imodpoly.cpp  imodpoly.h  modpoly.cpp  modpoly.h  polynomial.cpp  polynomial.h  psalsa.cpp  psalsa.h  sma.cpp  sma.h  snip.cpp  snip.h  spline.cpp  spline.h
conan/sablib/: conanfile.py
conan/sablib/test_package/: conanfile.py
misc/: bspline.h  convolve.h  cubic_spline.h  diff.h  expand.h  polyfit.h  spdiags.h
smoothing/: moving_average.cpp  moving_average.h  moving_median.cpp  moving_median.h  pspline.cpp  pspline.h  savitzky_golay.cpp  savitzky_golay.h  whittaker.cpp  whittaker.h
vcpkg/ports/sablib/: portfile.cmake  usage  vcpkg.json
